# bt-edb-kick

./: Makefile.am  README.md  configure.ac
presets/: BtEdbKick.prs
src/: debug.h  machine.c  properties_simple.c  properties_simple.h  voice.c  voice.h
